--- a/index.html
+++ b/index.html
@@ -74,96 +74,96 @@
             <!-- Gallery cards -->
              <div class="row justify-content-center align-items-center text-center mt-5 py-3">
                 <div class="col-12 col-sm-6 col-md-4">
-                    <div class="card">
+                    <div class="card border border-white border border-5">
                         <img src="newoctober.jpg" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
                           <h5 class="card-title joly-text">October</h5>
                           <p class="card-text ivystyle-tw">Check out my October Website!</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <a href="#" class="btn btn-primary">My Website</a>
                         </div>
                       </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
-                    <div class="card">
+                    <div class="card border border-white border border-5">
                         <img src="november.jpg" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
                           <h5 class="card-title joly-text">November</h5>
                           <p class="card-text ivystyle-tw">Check out my November Website!</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <a href="#" class="btn btn-primary">My Website</a>
                         </div>
                       </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
-                    <div class="card">
+                    <div class="card border border-white border border-5">
                         <img src="decembernew.jpg" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
                           <h5 class="card-title joly-text">December</h5>
                           <p class="card-text ivystyle-tw">Check out my December Website!</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <a href="#" class="btn btn-primary">My Website</a>
                         </div>
                       </div>
                 </div>
              </div>
              <div class="row justify-content-center align-items-center text-center mt-5 py-3">
               <div class="col-12 col-sm-6 col-md-4">
-                  <div class="card">
+                  <div class="card border border-white border border-5">
                       <img src="newjanuaryyy.jpg" class="card-img-top img-fluid" alt="...">
                       <div class="card-body">
                         <h5 class="card-title joly-text">January</h5>
                         <p class="card-text ivystyle-tw">Check out my January Website!.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="#" class="btn btn-primary">My Website</a>
                       </div>
                     </div>
               </div>
               <div class="col-12 col-sm-6 col-md-4">
-                  <div class="card">
+                  <div class="card border border-white border border-5">
                       <img src="february.jpg" class="card-img-top img-fluid" alt="...">
                       <div class="card-body">
                         <h5 class="card-title joly-text">February</h5>
                         <p class="card-text ivystyle-tw">Check out my February Website!</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="#" class="btn btn-primary">My Website</a>
                       </div>
                     </div>
               </div>
               <div class="col-12 col-sm-6 col-md-4">
-                  <div class="card">
+                  <div class="card border border-white border border-5">
                       <img src="march.jpg" class="card-img-top img-fluid" alt="...">
                       <div class="card-body">
                         <h5 class="card-title joly-text">March</h5>
                         <p class="card-text ivystyle-tw">Check out my March Website!</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="#" class="btn btn-primary">My Website</a>
                       </div>
                     </div>
               </div>
            </div>
            <div class="row justify-content-center align-items-center text-center mt-5 py-3">
             <div class="col-12 col-sm-6 col-md-4">
-                <div class="card">
+                <div class="card border border-white border border-5">
                     <img src="aprilpink.jpg" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
                       <h5 class="card-title joly-text">April</h5>
                       <p class="card-text ivystyle-tw">Check out my April Website!</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <a href="#" class="btn btn-primary">My Website</a>
                     </div>
                   </div>
             </div>
             <div class="col-12 col-sm-6 col-md-4">
-                <div class="card">
+                <div class="card border border-white border border-5">
                     <img src="may.jpg" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
                       <h5 class="card-title joly-text">May</h5>
                       <p class="card-text ivystyle-tw">Check out my May Website!</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <a href="#" class="btn btn-primary">My Website</a>
                     </div>
                   </div>
             </div>
             <div class="col-12 col-sm-6 col-md-4">
-                <div class="card">
+                <div class="card border border-white border border-5">
                     <img src="juneflower.jpg" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
                       <h5 class="card-title joly-text">June</h5>
                       <p class="card-text ivystyle-tw">Check out my June Website!</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <a href="#" class="btn btn-primary">My Website</a>
                     </div>
                   </div>
             </div>
